--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':Library'
+include ':PLChipGroup'
 include ':app'
-rootProject.name = "PLChipGroup"
+rootProject.name = "library-PLChipGroup"
