--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,16 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 ext {
-    compileSdkVersion = 30
+    compileSdkVersion = 31
+    buildToolsVersion = "31.0.0"
     minSdkVersion = 19
-    targetSdkVersion = 30
+    targetSdkVersion = 31
     versionCode = 2105162
     versionName = "1.0.6"
 }
