--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,17 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'com.android.tools.build:gradle:8.4.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 ext {
-    compileSdkVersion = 32
-    buildToolsVersion = "32.0.0"
-    minSdkVersion = 19
-    targetSdkVersion = 32
-    versionCode = 2206161
-    versionName = "1.2.1"
+    compileSdkVersion = 34
+    minSdkVersion = 21
+    targetSdkVersion = 34
+    versionCode = 2405291
+    versionName = "1.3.0"
 }
 
 allprojects {
@@ -26,6 +25,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 }
